[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Enemys/Bullet Script/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Temp_frames/weapon_knife.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=3]
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 2.5 )

[node name="Bullet" type="RigidBody2D"]
collision_layer = 8
collision_mask = 2
physics_material_override = SubResource( 3 )
script = ExtResource( 1 )
Bullet_Speed = 100
Bullet_lifetime = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hit_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Area"]
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[connection signal="area_entered" from="Hit_Area" to="." method="_on_Hit_Area_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
